// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnChart Component snapshots should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(ColumnChart)
    caption={[Function]}
    data={
      Array [
        Object {
          "name": "Immediate",
          "y": 231,
        },
        Object {
          "name": "Jan 15, 2019 — Jan 28, 2019",
          "y": 91,
        },
        Object {
          "name": "Feb 15, 2019 — Mar 28, 2019",
          "y": 321,
        },
        Object {
          "name": "Apr 15, 2019 — May 28, 2019",
          "y": 81,
        },
        Object {
          "name": "Jun 15, 2019 — Jul 28, 2019",
          "y": 263,
        },
      ]
    }
    subtitle="Total: 480 pieces"
    title="Distribution of delivery"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "allowUpdate": false,
      "caption": [Function],
      "data": Array [
        Object {
          "name": "Immediate",
          "y": 231,
        },
        Object {
          "name": "Jan 15, 2019 — Jan 28, 2019",
          "y": 91,
        },
        Object {
          "name": "Feb 15, 2019 — Mar 28, 2019",
          "y": 321,
        },
        Object {
          "name": "Apr 15, 2019 — May 28, 2019",
          "y": 81,
        },
        Object {
          "name": "Jun 15, 2019 — Jul 28, 2019",
          "y": 263,
        },
      ],
      "subtitle": "Total: 480 pieces",
      "theme": undefined,
      "title": "Distribution of delivery",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "allowUpdate": false,
        "caption": [Function],
        "data": Array [
          Object {
            "name": "Immediate",
            "y": 231,
          },
          Object {
            "name": "Jan 15, 2019 — Jan 28, 2019",
            "y": 91,
          },
          Object {
            "name": "Feb 15, 2019 — Mar 28, 2019",
            "y": 321,
          },
          Object {
            "name": "Apr 15, 2019 — May 28, 2019",
            "y": 81,
          },
          Object {
            "name": "Jun 15, 2019 — Jul 28, 2019",
            "y": 263,
          },
        ],
        "subtitle": "Total: 480 pieces",
        "theme": undefined,
        "title": "Distribution of delivery",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ColumnChart Component snapshots should match snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(ColumnChart)
    caption={[Function]}
    data={
      Array [
        Object {
          "name": "Immediate",
          "y": 42,
        },
      ]
    }
    height={300}
    subtitle="Total: 42 pieces"
    title="Distribution of delivery"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "allowUpdate": false,
      "caption": [Function],
      "data": Array [
        Object {
          "name": "Immediate",
          "y": 42,
        },
      ],
      "height": 300,
      "subtitle": "Total: 42 pieces",
      "theme": undefined,
      "title": "Distribution of delivery",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "allowUpdate": false,
        "caption": [Function],
        "data": Array [
          Object {
            "name": "Immediate",
            "y": 42,
          },
        ],
        "height": 300,
        "subtitle": "Total: 42 pieces",
        "theme": undefined,
        "title": "Distribution of delivery",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
